<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <Button
        android:id="@+id/button_forward"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/fr_forward" />

    <Button
        android:id="@+id/button_left"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_forward"
        android:layout_toLeftOf="@+id/button_forward"
        android:text="@string/fr_left" />

    <Button
        android:id="@+id/button_right"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_forward"
        android:layout_toRightOf="@+id/button_forward"
        android:text="@string/fr_right" />

    <Button
        android:id="@+id/button_backward"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_left"
        android:layout_toRightOf="@+id/button_left"
        android:text="@string/fr_backward" />

    <Button
        android:id="@+id/button_stop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button_forward"
        android:layout_alignRight="@+id/button_forward"
        android:layout_below="@+id/button_forward"
        android:text="@string/fr_stop" />

    <ImageView
        android:id="@+id/imageView_stream"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/button_backward"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/fr_loading" />

</RelativeLayout>